Fix header overflow

--- a/resources/scss/home/style.scss
+++ b/resources/scss/home/style.scss
@@ -5,20 +5,19 @@ div.header {
     background-color: $primary_color;
     color: $white;
 
-    flex-direction: column !important;
     justify-content: center;
     align-content: center !important;
-
-    height: 20vh;
 
     h1 {
         text-align: center;
     }
 }
 
-#login_username {
-    position: relative;
-    right: -42vw;
+#login_username_parent {
+    justify-content: right;
+    width: 100%;
+    margin-right: 1vw;
+    margin-bottom: 1vw;
 }
 
 #home_links {
